# apicathcergemini

./: DEPLOYMENT_GUIDE.md  Dockerfile  Procfile  Procfile.railway  RAILWAY_409_ERROR_FIX.md  RAILWAY_DEPLOYMENT.md  README.md  alternative_import.md  api_key_generator.py  app.py  bot.py  captcha_solver.py  check_packages.py  clean_start.py  clean_telegram_connections.py  docker-compose.yml  fix-distutils.py  fix-undetected-chromedriver.py  fix_telegram_errors.py  fix_webhook.py  force_reset_telegram.py  gemini_api_validator.py  gmail_creator.py  main.py  models.py  monkey_patch.py  patcher.py  prepare_chrome.py  process_account_creation.txt  proxy_manager.py  pyproject.toml  pyproject.toml-railway  railway.toml  railway_webhook_setup.py  replit.nix  replit_webhook_setup.py  run_bot.py  simple_bot.py  smart_launcher.py  telegram_api.py  (+8 more)
attached_assets/: Pasted---1743288359700.txt  Pasted---1743289676674.txt  Pasted---1743312182692.txt  Pasted---1743322114602.txt  Pasted---1743328863639.txt  Pasted--2025-03-30-09-50-18-0000-6630-INFO-Listening-at-http-0-0-0-0-5000-6630-2025-03-30-09-5-1743328299294.txt  Pasted--API-HTTP-HTTPS-SOCKS4-SOCKS5-1743322896195.txt  Pasted--API-Key-Ge-1743315571570.txt  Pasted--API-Key-Google-AI-Studio--1743290779171.txt  Pasted--API-Twilio--1743316878503.txt  Pasted--Google-AI-Studio-API-Key--1743289416048.txt  Pasted--Google-Gemini-API-API-Key--1743287917151.txt  Pasted--distutils-packaging-Requirement-already-satisfied-packaging--1743326729392.txt  Pasted--inline-key-1743290064269.txt  (+5 more)
instance/: bot.db
templates/: index.html  status.html
(+2 files in other folders)
