[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "packaging>=24.2",
    "psutil>=7.0.0",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot[all]>=22.0",
    "requests>=2.32.3",
    "selenium>=4.30.0",
    "speechrecognition>=3.14.2",
    "sqlalchemy>=2.0.40",
    "telegram>=0.0.1",
    "twilio>=9.5.1",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
]
